# mini-search

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md  install.md  learning_experiences.md  optimizing_relevancy.md
scripts/: get_model.sh
src/: crawler.rs  index.rs  main.rs  transformers.rs
views/: base.html  index.html  stats.html
